# ScanParser

./: CMakeLists.txt  README.md  main.cpp  readme.md
data/: my.json  my.pcap
parser/: parser.cpp  parser.h
